# aund

./: .gitignore  .nvimrc  AcornAppNote075.md  AcornAppNote075.txt  Econet.cfg  INSTALL  Makefile.am  Makefile.in  NEWS  NEWS.orig  README  aclocal.m4  aun.c  aun.h  aund  aund-1.02to1.03.patch  aund.8  aund.c  aund.conf.5  aund.conf.example  aund.passwd.5  beebem.c  bootstrap.sh  conf_lex.c  conf_lex.l  config.h  config.h.in  config.status  configure  configure.ac  extern.h  file.txt  fileserver.c  fileserver.h  fs_cli.c  fs_error.c  fs_errors.h  fs_examine.c  fs_fileio.c  fs_fileio.c.orig  (+13 more)
.deps/: aun.Po  aund.Po  beebem.Po  fileserver.Po  fs_cli.Po  fs_error.Po  fs_examine.Po  fs_fileio.Po  fs_filetype.Po  fs_handle.Po  fs_misc.Po  fs_nametrans.Po  fs_util.Po  libconf_lex_a-conf_lex.Po  pw.Po  user_null.Po
.github/workflows/: codeql-analysis.yml
contrib/: EcoProxy,ffb
